Redirect tipo Utente

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 div.container {
     display: inline-block;
 }
+
+footer{
+    color: white !important;
+}
+
+pre{
+    color: white !important;
+}
