sistemazione pagina Admin

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,13 @@ pre{
     color: white !important;
     
 }
+
+#statischeHome{
+    display: flex !important;
+
+}
+
+.statistiche{
+    width: 20% !important;
+    
+}
