--- a/css/logIn.css
+++ b/css/logIn.css
@@ -2,7 +2,7 @@
 /* BASIC */
 
 html {
-    background-color: #56baed;
+    background-color: #505050;
   }
   
   body {
@@ -74,7 +74,7 @@ html {
   
   h2.active {
     color: #0d0d0d;
-    border-bottom: 2px solid #5fbae9;
+    border-bottom: 2px solid #505050;
   }
   
   
@@ -82,7 +82,7 @@ html {
   /* FORM TYPOGRAPHY*/
   
   input[type=button], input[type=submit], input[type=reset]  {
-    background-color: #56baed;
+    background-color: #505050;
     border: none;
     color: white;
     padding: 15px 80px;
@@ -104,7 +104,7 @@ html {
   }
   
   input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-    background-color: #39ace7;
+    background-color: #505050;
   }
   
   input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -138,7 +138,7 @@ html {
   
   input[type=text]:focus {
     background-color: #fff;
-    border-bottom: 2px solid #5fbae9;
+    border-bottom: 2px solid #505050;
   }
   
   input[type=text]:placeholder {
@@ -236,7 +236,7 @@ html {
     bottom: -10px;
     width: 0;
     height: 2px;
-    background-color: #56baed;
+    background-color: #505050;
     content: "";
     transition: width 0.2s;
   }
